update source code due to now using Auth0
